# emtmlibpy

./: LICENSE  README.md  setup.cfg
src/: setup.cfg  test_emtmlibpy.py
src/emtmlibpy/: __init__.py  emtmlibpy.py
src/notebooks/: gen_yolo_training_data.ipynb
src/scripts/: gen_yolo_training_data.py
