
[metadata]
name = emtmlibpy
version = 0.0.2
author = Dan Marrable
author_email = d.marrable@curtin.edu.au
description = Python wrapper for the EventMeasure C library by SeaGIS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AutomatedFishID/emtmlibpy
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas>= 1.5.0,< 1.6.9
    numpy>=1.22.3

[options.packages.find]
where = src
